# flux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATIONS.md  NODE_REFERENCE.md  ONBOARDING.md  ROADMAP.md  SHADER_CONVENTIONS.md
examples/: atmospheric.ron  cubes.ron  first_loop.ron  sphere.ron  sweep.ron
examples/shaders/: sweep.wgsl
shaders/: blend.wgsl  blit.wgsl  bloom.wgsl  chromatic_aberration.wgsl  color_grade.wgsl  displace.wgsl  feedback.wgsl  gradient.wgsl  grain.wgsl  instance.wgsl  levels.wgsl  noise.wgsl  raymarch.wgsl  transform.wgsl
src/: audio_player.rs  inspector.rs  lib.rs  main.rs  preview.rs  test_utils.rs
src/audio/: analysis.rs  mod.rs
src/engine/: context.rs  frame.rs  graph.rs  mod.rs
src/nodes/: blend.rs  bloom.rs  chromatic_aberration.rs  color_grade.rs  custom_shader.rs  displace.rs  feedback.rs  gradient.rs  grain.rs  instance.rs  levels.rs  mod.rs  noise.rs  raymarch.rs  shader_pass.rs  solid.rs  transform.rs
src/nodes/snapshots/: flux__nodes__blend__tests__add_mode_sums_inputs.snap  flux__nodes__bloom__tests__passes_through_below_threshold.snap  flux__nodes__chromatic_aberration__tests__zero_amount_passes_through.snap  flux__nodes__color_grade__tests__identity_lut_is_passthrough.snap  flux__nodes__custom_shader__tests__no_input_shader_runs.snap  flux__nodes__custom_shader__tests__one_input_passthrough.snap  flux__nodes__displace__tests__vector_mode_neutral_map_is_identity.snap  (+10 more)
src/output/: ffmpeg.rs  mod.rs
src/project/: mod.rs  schema.rs
